--- a/_includes/1-head.html
+++ b/_includes/1-head.html
@@ -44,4 +44,7 @@
     @media (min-width: 768px) {header{min-height: 33%;} header .header-content {height: 33vh;}}
     {% endif %}
     </style>
+    <style>
+    {% if page.css %}{{page.css}}{% endif %}
+    </style>
 </head>
