--- a/_includes/2-nav.html
+++ b/_includes/2-nav.html
@@ -5,7 +5,7 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span><i class="fa fa-bars fa-lg"></i>
             </button>
-            <a class="navbar-brand page-scroll" href="{% if page.title != "homepage" %}/{%else%}#page-top{%endif%}">{{site.title}}</a>
+            <a class="navbar-brand page-scroll" href="{% if page.homepage == true %}#page-top{%else%}#{%endif%}">{{site.title}}</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -15,7 +15,7 @@
                   <a class="page-scroll" href="/bikeways">Bikeways</a>
               </li>
                 <li>
-                    <a class="page-scroll" href="/parks">Hiking</a>
+                    <a class="page-scroll" href="/hiking">Hiking</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="/mountain-biking">Mountain Biking</a>
@@ -30,7 +30,7 @@
                     <a class="page-scroll" href="#search-input"><i class="fa fa-search fa-lg"></i></a>
                 </li>
                 <li>
-                  <a class="page-scroll" href="/about/" data-toggle="tooltip" title="More Information" data-placement="bottom"><i class="fa fa-info-circle fa-lg"></i></a>
+                  <a class="page-scroll" href="{% if page.permalink == "/map/" %}/#about{% else %}#about{% endif%}"><i class="fa fa-info-circle fa-lg"></i></a>
                 </li>
             </ul>
         </div>
