--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -57,6 +57,15 @@ $theme-dark: #222;
   "base"
 ;
 /*custom*/
+#blank {
+  position:absolute;
+  top:0;
+  left:0;
+  bottom:0;
+  width:100%;
+  z-index:9999;
+  background:white;
+}
 header {
   background: url(/assets/img/homepage-images/map-header-gray_compressed.jpg),linear-gradient(to left, #39423b, #1b7837);
   background-size: cover;
@@ -235,10 +244,23 @@ footer {
 }
 /*change bootstrap navbar media query*/
 @media (max-width: 992px) {
-    .navbar-header {
-        float: none;
-    }
-    .navbar-left,.navbar-right {
+  .navbar-default .nav>li>a {
+    letter-spacing: 0px;
+  }
+}
+/*nav list tweaks mobile*/
+/*.nav>li {
+    position: relative;
+    display: block;
+    text-align: center;
+    border-bottom: solid thin lightgray;
+}
+*/
+  /*
+  .navbar-header {
+      float: none;
+  }
+  {  .navbar-left,.navbar-right {
         float: none !important;
     }
     .navbar-toggle {
@@ -269,4 +291,4 @@ footer {
     .collapse.in{
         display:block !important;
     }
-}
+}*/
